--- a/abaravi.html
+++ b/abaravi.html
@@ -62,7 +62,7 @@
              width: 50%;
              border-radius: 50%;
              width:700px;
-                         
+
         }
     </style>
 </head>
@@ -87,7 +87,7 @@
         
     </div>
     <div class="image">
-    <img src="artbreeder-mixer-2023-10-07T15_49_41.071Z.jpeg" class="image">
+    <img src="	https://artbreederpublic-shortlived.s3.amazonaws.com/30d/imgs/8ce73dc7fcb74483b60ca374.jpeg" class="image">
 </div>
     </body>
 
